--- a/package.json
+++ b/package.json
@@ -3,14 +3,32 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
-      "ts-node": "3.3.0",
+      "@types/console-stamp": "^0.2.32",
+      "@types/cors": "^2.8.6",
+      "@types/dotenv": "^8.2.0",
+      "@types/express": "^4.17.2",
+      "@types/express-redis-cache": "^1.1.0",
+      "@types/jest": "^24.0.24",
       "@types/node": "^8.0.29",
+      "@types/redis": "^2.8.14",
+      "jest": "^24.9.0",
+      "nodemon": "^2.0.2",
+      "ts-jest": "^24.2.0",
+      "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
-      "typeorm": "0.2.21",
+      "console-stamp": "^0.2.9",
+      "cors": "^2.8.5",
+      "dotenv": "^8.2.0",
+      "express": "^4.17.1",
+      "express-redis-cache": "^1.1.3",
+      "express-validator": "^6.3.0",
+      "helmet": "^3.21.2",
+      "mysql": "^2.14.1",
+      "redis": "^2.8.0",
       "reflect-metadata": "^0.1.10",
-      "mysql": "^2.14.1"
+      "typeorm": "0.2.21"
    },
    "scripts": {
       "start": "ts-node src/index.ts"
