--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "@types/dotenv": "^8.2.0",
       "@types/express": "^4.17.2",
       "@types/express-redis-cache": "^1.1.0",
+      "@types/helmet": "^0.0.45",
       "@types/jest": "^24.0.24",
       "@types/node": "^8.0.29",
       "@types/redis": "^2.8.14",
