--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
       "@types/jest": "^24.0.24",
       "@types/node": "^8.0.29",
       "@types/redis": "^2.8.14",
+      "@types/swagger-jsdoc": "^3.0.2",
+      "@types/swagger-ui-express": "^4.1.0",
       "jest": "^24.9.0",
       "nodemon": "^2.0.2",
       "ts-jest": "^24.2.0",
@@ -28,6 +30,8 @@
       "mysql": "^2.14.1",
       "redis": "^2.8.0",
       "reflect-metadata": "^0.1.10",
+      "swagger-jsdoc": "^3.5.0",
+      "swagger-ui-express": "^4.1.2",
       "typeorm": "0.2.21"
    },
    "scripts": {
