--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
       "@types/jest": "^24.0.24",
       "@types/node": "^8.0.29",
       "@types/redis": "^2.8.14",
+      "@types/supertest": "^2.0.8",
       "@types/swagger-jsdoc": "^3.0.2",
       "@types/swagger-ui-express": "^4.1.0",
       "jest": "^24.9.0",
       "nodemon": "^2.0.2",
+      "supertest": "^4.0.2",
       "ts-jest": "^24.2.0",
       "ts-node": "3.3.0",
       "typescript": "3.3.3333"
@@ -35,6 +37,7 @@
       "typeorm": "0.2.21"
    },
    "scripts": {
-      "start": "nodemon ./dist/index.js"
+      "start": "nodemon ./dist/index.js",
+      "test": "NODE_ENV=test jest --verbose true --watch"
    }
 }
