--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
    },
    "scripts": {
       "start": "nodemon ./dist/index.js",
-      "test": "NODE_ENV=test jest --verbose true --watch"
+      "test": "NODE_ENV=test jest --verbose true --forceExit --detectOpenHandles --watch"
    }
 }
